8324859: Improve error recovery